deploy: a3d386f5b45c8a42a53fe50eee9b743ff06aabb9

--- a/cv/index.html
+++ b/cv/index.html
@@ -26,4 +26,4 @@ algorithm analysis, calculus, formal proof, cybersecurity and software
 programming.</p><p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong> \
 <em>2015, Vilnius LT</em></p><p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong> \
 <em>2011-2013, Paris</em></p><p>Preparatory classes: two-year undergraduate intensive course in
-mathematics and physics.</p></div></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+mathematics and physics.</p></div></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
