--- a/fr/index.html
+++ b/fr/index.html
@@ -9,4 +9,4 @@ edouard.paris/fr/index.txt | less</strong></div></aside><section><div class=arti
 </code></pre><p>Je m&rsquo;appelle Édouard Paris.</p><p>Je suis ingénieur en informatique et mathématiques appliquées,
 vous pouvez me retrouver sur :</p><p><a href=https://twitter.com/edouardparis>Twitter</a>
 / <a href=https://github.com/edouardparis>GitHub</a>
-/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
