--- a/fr/topics/index.html
+++ b/fr/topics/index.html
@@ -3,4 +3,4 @@ edouard.paris/fr/topics/index.txt | less</strong></div></aside><section><div cla
 </span>|
 <a href=https://edouard.paris/fr/lecture/>lecture</a></li></ul><h1>0001 --</h1><ul><li><span><time>Jan 01</time>
 </span>|
-<a href=https://edouard.paris/fr/bitcoin/>bitcoin</a></li></ul></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+<a href=https://edouard.paris/fr/bitcoin/>bitcoin</a></li></ul></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
