--- a/notes/i-asked-gpt4-to-create-dobble/index.html
+++ b/notes/i-asked-gpt4-to-create-dobble/index.html
@@ -234,4 +234,4 @@ create_card_images(folder_path, card_set)
 </code></pre><p>Replace &lsquo;path/to/your/folder&rsquo; with the actual path to the folder containing your
 image files. The script will create and save the circular Dobble game cards with
 resized and distributed symbols in the &lsquo;cards&rsquo; directory as before.</p></div></section><footer id=footer><time>created: Mar 26 2023
-| updated: Mar 28 2023</time></aside><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+| updated: Mar 28 2023</time></aside><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
