--- a/notes/index.html
+++ b/notes/index.html
@@ -4,4 +4,4 @@ edouard.paris/notes/index.txt | less</strong></div></aside><section><div class=a
 </span>|
 <a href=https://edouard.paris/notes/i-asked-gpt4-to-create-dobble/>I Asked GPT-4 to help me create a Dobble card deck</a></li></ul><h1>2022 --</h1><ul><li><span><time>Jan 18</time>
 </span>|
-<a href=https://edouard.paris/notes/how-i-sign-lntop-binary/>How I sign a LNTOP binary</a></li></ul></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+<a href=https://edouard.paris/notes/how-i-sign-lntop-binary/>How I sign a LNTOP binary</a></li></ul></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
