--- a/readings/index.html
+++ b/readings/index.html
@@ -93,4 +93,4 @@ cherry pick information from them.</p><p>If the title is translated in French: I
 - Harper Lee</br><em>Bonjour tristesse</em>
 - Françoise Sagan</br><em>Charlotte</em>
 - David Foenkinos</br><em>L'hibiscus pourpre</em>
-- Chimamanda Ngozi Adichie</br></p></section><footer id=footer><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+- Chimamanda Ngozi Adichie</br></p></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
