--- a/notes/how-i-sign-lntop-binary/index.html
+++ b/notes/how-i-sign-lntop-binary/index.html
@@ -36,4 +36,4 @@ gpg --verify checksums-lntop-v0.3.0.txt.sig checksums-lntop-v0.3.0.txt
 bio</a>.
 Finally the binary and release files are extracted with:</p><pre tabindex=0><code class=language-pink data-lang=pink>tar -ztvf lntop-v0.3.0-Linux-arm64.tar.gz
 </code></pre></div></section><footer id=footer><time>created: Jan 18 2022
-| updated: Mar 20 2023</time></aside><p>&copy; 2020 EdouardParis. Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></footer></main></body></html>
+| updated: Mar 20 2023</time></aside><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
