--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -19,4 +19,4 @@ edouard.paris/bitcoin/index.txt | less</strong></div></aside><section><div class
 00000110   8A 4C 70 2B 6B F1 1D 5F  AC 00 00 00 00            ŠLp+kñ._¬....
 </code></pre></div><h1>2019 --</h1><ul><li><span><time>Oct 21</time>
 </span>|
-<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
+<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
