--- a/notes/how-i-sign-lntop-binary/index.html
+++ b/notes/how-i-sign-lntop-binary/index.html
@@ -35,5 +35,5 @@ gpg --verify checksums-lntop-v0.3.0.txt.sig checksums-lntop-v0.3.0.txt
 </code></pre><p>My gpg key fingerprint is in my <a href=https://twitter.com/edouardparis>twitter
 bio</a>.
 Finally the binary and release files are extracted with:</p><pre tabindex=0><code class=language-pink data-lang=pink>tar -ztvf lntop-v0.3.0-Linux-arm64.tar.gz
-</code></pre></div></section><footer id=footer><time>created: Jan 18 2022
-| updated: Mar 20 2023</time></aside><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
+</code></pre></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer><time>created: Jan 18 2022
+| updated: Mar 20 2023</time></footer></main></body></html>
