--- a/talks/index.html
+++ b/talks/index.html
@@ -5,4 +5,4 @@ edouard.paris/talks/index.txt | less</strong></div></aside><section><div class=a
 <a href=/slides/2019-06-18-meetup-go-paris>slides</a> /
 <a href=https://www.meetup.com/fr-FR/Golang-Paris/events/262210434/>link</a></p><h2 id=loukoum-an-sql-builder-for-go-fr>Loukoum, an SQL Builder for Go (FR)</h2><p>2019-02-21, for the meetup Postgres Paris -
 <a href=https://github.com/novln/loukoum-pgmeetup>slides</a> /
-<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p></div></section><footer id=footer><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside></footer></main></body></html>
+<a href=https://www.meetup.com/fr-FR/PostgreSQL-User-Group-Paris/events/258592000/>link</a></p></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
