--- a/notes/i-asked-gpt4-to-create-dobble/index.html
+++ b/notes/i-asked-gpt4-to-create-dobble/index.html
@@ -9,11 +9,11 @@ combination of symbols, and each pair of cards shares exactly one symbol in
 common. To create a Gobble card game with 50 cards, you&rsquo;ll need to determine the
 number of symbols per card and the total number of unique symbols required.</p><p>The game is based on projective geometry and can be represented by the formula:</p><p>n(n - 1) + 1 = total number of unique symbols</p><p>where n is the number of symbols per card.</p><p>For a Gobble card game with 50 cards, you will have:</p><p>50 = n(n - 1) + 1</p><p>Solving this equation for n, you&rsquo;ll find that there isn&rsquo;t a whole number
 solution. The closest solutions are n = 7 and n = 8, which result in 43 and 57
-unique symbols, respectively.</p><p>So, if you want to create a Gobble card game with 50 cards, you can either:</p><ol><li><p>Create a game with 7 symbols per card and 43 unique symbols. In this case,
+unique symbols, respectively.</p><p>So, if you want to create a Gobble card game with 50 cards, you can either:</p><ol><li>Create a game with 7 symbols per card and 43 unique symbols. In this case,
 you will have 7 extra cards that you can use as additional variants, bonus
-cards, or even for replacement cards in case some get damaged or lost.</p></li><li><p>Create a game with 8 symbols per card and 57 unique symbols. In this case,
+cards, or even for replacement cards in case some get damaged or lost.</li><li>Create a game with 8 symbols per card and 57 unique symbols. In this case,
 you will need to remove 7 cards to have exactly 50 cards, but the game
-mechanics will still work correctly.</p></li></ol><p class=language-blue>I have a folder with 43 image files in it, can you give me a python script
+mechanics will still work correctly.</li></ol><p class=language-blue>I have a folder with 43 image files in it, can you give me a python script
 that read this folder and prints an array (the card set) of array (each
 row is a list of the file names that will be the symbols on the cards) ?</p><p>Sure, here&rsquo;s a Python script that reads a folder containing 43 image files and
 generates a card set with 7 symbols per card, where each row represents a card:</p><pre tabindex=0><code class=language-code-pink data-lang=code-pink>import os
@@ -234,4 +234,4 @@ create_card_images(folder_path, card_set)
 </code></pre><p>Replace &lsquo;path/to/your/folder&rsquo; with the actual path to the folder containing your
 image files. The script will create and save the circular Dobble game cards with
 resized and distributed symbols in the &lsquo;cards&rsquo; directory as before.</p></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer><time>created: Mar 26 2023
-| updated: Mar 28 2023</time></footer></main></body></html>
+| updated: May 08 2023</time></footer></main></body></html>
