deploy: 8b0c2c9c5de5a8ec7afe20fb1d4dadb15cb6bd07

--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ edouard.paris/index.txt | less</strong></div></aside><section><div class=article
 </code></pre><p>My name is Édouard Paris.</p><p>I am a French engineer in computer science and applied mathematics.
 Find me on:</p><p><a href=https://twitter.com/edouardparis>Twitter</a>
 / <a href=https://github.com/edouardparis>GitHub</a>
-/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p><p>Find here:</p><ul><li><a href=/blog>/blog</a> -> my personal blog</li><li><a href=/articles>/articles</a> -> long format articles</li><li><a href=notes>/notes</a> -> short notes for myself and others</li></ul></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
