deploy: fe1abcdc8afe558fa73732f2e426c26ed2140459

--- a/readings/index.html
+++ b/readings/index.html
@@ -8,7 +8,8 @@ edouard.paris/readings/index.txt | less</strong></div></aside><section><div clas
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>Slime, a natural history</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>L'île de silicium</em>
+- Chen Qiufan</br><em>Slime, a natural history</em>
 - Susanne Wedlich</br><em>Le grand Coeur</em>
 - Jean-Christophe Rufin</br><em>Tau Zéro</em>
 - Poul Anderson</br><em>Mona Lisa disjoncte</em>
