--- a/fr/index.html
+++ b/fr/index.html
@@ -7,6 +7,5 @@ edouard.paris/fr/index.txt | less</strong></div></aside><section><div class=arti
   \::/  /   \::/  /    |:/  /   \/__/     \::/  /   \::/  /   |:\/__/
    \/__/     \/__/     \/__/               \/__/     \/__/     \|__| ,
 </code></pre><p>Je m&rsquo;appelle Édouard Paris.</p><p>Je suis ingénieur en informatique et mathématiques appliquées,
-vous pouvez me retrouver sur :</p><p><a href=https://twitter.com/edouardparis>Twitter</a>
-/ <a href=https://github.com/edouardparis>GitHub</a>
+vous pouvez me retrouver sur :</p><p>/ <a href=https://github.com/edouardparis>GitHub</a>
 / <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
