deploy: 3a91d845c67de6e4dc0d0920f7c3f69b70d1d17a

--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -17,6 +17,8 @@ edouard.paris/bitcoin/index.txt | less</strong><br></div></aside><section><div c
 000000F0   79 62 E0 EA 1F 61 DE B6  49 F6 BC 3F 4C EF 38 C4   ybàê.aÞ¶Iö¼?Lï8Ä
 00000100   F3 55 04 E5 1E C1 12 DE  5C 38 4D F7 BA 0B 8D 57   óU.å.Á.Þ\8M÷º..W
 00000110   8A 4C 70 2B 6B F1 1D 5F  AC 00 00 00 00            ŠLp+kñ._¬....
-</code></pre></div><h1>2019 --</h1><ul><li><span><time>Oct 21</time>
+</code></pre></div><h1>2023 --</h1><ul><li><span><time>Jun 15</time>
+</span>|
+<a href=https://edouard.paris/articles/bitcoin-and-house-of-dragon/>Bitcoin and inheritance, a House of the Dragon story</a></li></ul><h1>2019 --</h1><ul><li><span><time>Oct 21</time>
 </span>|
 <a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
