deploy: dcd553c937143681d24c54b92644cf697bfc91da

--- a/bitcoin/index.html
+++ b/bitcoin/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><br>Read this page in your terminal with the command:<br><strong>$ curl -L
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /bitcoin<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
 edouard.paris/bitcoin/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/bitcoin>/bitcoin</a></div><div class=article-body><pre tabindex=0><code>00000000   01 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000010   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000020   00 00 00 00 3B A3 ED FD  7A 7B 12 B2 7A C7 2C 3E   ....;£íýz{.²zÇ,&gt;
@@ -21,4 +21,4 @@ edouard.paris/bitcoin/index.txt | less</strong><br></div></aside><section><div c
 </span>|
 <a href=https://edouard.paris/articles/bitcoin-and-house-of-dragon/>Bitcoin and inheritance, a House of the Dragon story</a></li></ul><h1>2019 --</h1><ul><li><span><time>Oct 21</time>
 </span>|
-<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+<a href=https://edouard.paris/blog/tlc2019/>The Lightning Conference 2019</a></li></ul></section><aside><div class=sidenote><p>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
