--- a/fr/bitcoin/index.html
+++ b/fr/bitcoin/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><br>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /bitcoin<br><br>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L
 edouard.paris/fr/bitcoin/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/bitcoin>/bitcoin</a></div><div class=article-body><pre tabindex=0><code>00000000   01 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000010   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
 00000020   00 00 00 00 3B A3 ED FD  7A 7B 12 B2 7A C7 2C 3E   ....;£íýz{.²zÇ,&gt;
@@ -17,4 +17,4 @@ edouard.paris/fr/bitcoin/index.txt | less</strong><br></div></aside><section><di
 000000F0   79 62 E0 EA 1F 61 DE B6  49 F6 BC 3F 4C EF 38 C4   ybàê.aÞ¶Iö¼?Lï8Ä
 00000100   F3 55 04 E5 1E C1 12 DE  5C 38 4D F7 BA 0B 8D 57   óU.å.Á.Þ\8M÷º..W
 00000110   8A 4C 70 2B 6B F1 1D 5F  AC 00 00 00 00            ŠLp+kñ._¬....
-</code></pre></div></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+</code></pre></div></section><aside><div class=sidenote><p>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
