--- a/readings/index.html
+++ b/readings/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><br>Read this page in your terminal with the command:<br><strong>$ curl -L
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /reading<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
 edouard.paris/readings/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/reading>/reading</a></div><div class=article-body><pre tabindex=0><code class=language-ascii data-lang=ascii>______             _
 | ___ \           | |
 | |_/ / ___   ___ | | _____
@@ -95,4 +95,4 @@ cherry pick information from them.</p><p>If the title is translated in French: I
 - Harper Lee</br><em>Bonjour tristesse</em>
 - Françoise Sagan</br><em>Charlotte</em>
 - David Foenkinos</br><em>L'hibiscus pourpre</em>
-- Chimamanda Ngozi Adichie</br></p></section><aside><div class=sidenote><p>&copy; 2020 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+- Chimamanda Ngozi Adichie</br></p></section><aside><div class=sidenote><p>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
