--- a/cv/index.html
+++ b/cv/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /cv<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /cv<br><br><br><strong>$ curl -L
 edouard.paris/cv/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/cv>/cv</a></div><div class=article-body><pre tabindex=0><code class=language-blue data-lang=blue>              .---.
    ,---.    /.  ./|
   /     \ .-&#39; . &#39; |
@@ -19,4 +19,4 @@ used: QuantLib and TinyXml.</p><h1 id=-education----->[ Education ] &mdash;</h1>
 l’Entreprise</em>, National Graduate Engineering School. Coursework about
 algorithm analysis, calculus, formal proof, cybersecurity and software
 programming.</p><p><strong>Erasmus Semester in computer science, Vilniaus Universitetas</strong><br><em>2015, Vilnius LT</em></p><p><strong>Classes préparatoires aux grandes écoles, Lycée Michelet</strong><br><em>2011-2013, Paris</em></p><p>Preparatory classes: two-year undergraduate intensive course in
-mathematics and physics.</p></div></section><aside><div class=sidenote><p>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+mathematics and physics.</p></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
