--- a/notes/how-i-sign-lntop-binary/index.html
+++ b/notes/how-i-sign-lntop-binary/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote>created: Jan 18 2022<br>updated: Mar 20 2023<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote>created: Jan 18 2022<br>updated: Mar 20 2023<br><br><br><strong>$ curl -L
 edouard.paris/notes/how-i-sign-lntop-binary/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/notes>/notes</a><a>/how-i-sign-lntop-binary</a></div><div class=article-body><h1 id=how-i-sign-a-lntop-binary>How I sign a LNTOP binary</h1><p>I am always amazed that someone, somewhere, is running my code or a
 binary built from it. Since I released a little software named
 <a href=https://github.com/edouardparis/lntop><code>lntop</code></a> a few years ago, I
@@ -35,4 +35,4 @@ gpg --verify checksums-lntop-v0.3.0.txt.sig checksums-lntop-v0.3.0.txt
 </code></pre><p>My gpg key fingerprint is in my <a href=https://twitter.com/edouardparis>twitter
 bio</a>.
 Finally the binary and release files are extracted with:</p><pre tabindex=0><code class=language-pink data-lang=pink>tar -ztvf lntop-v0.3.0-Linux-arm64.tar.gz
-</code></pre></div></section><aside><div class=sidenote><p>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></p></div></aside><footer id=footer></footer></main></body></html>
+</code></pre></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
