--- a/cv/index.html
+++ b/cv/index.html
@@ -1,14 +1,14 @@
-<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /cv<br><br><br><strong>$ curl -L
-edouard.paris/cv/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/cv>/cv</a></div><div class=article-body><pre tabindex=0><code class=language-blue data-lang=blue>              .---.
+<!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /cv<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
+edouard.paris/cv/index.txt | less</strong><br></div></aside><section><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/cv>/cv</a></div><div class=article-body><pre><code class=language-blue data-lang=blue>              .---.
    ,---.    /.  ./|
-  /     \ .-&#39; . &#39; |
- /    / &#39;/___/ \: |
-.    &#39; / .   \  &#39; .
-&#39;   ; :__ \   \   &#39;
-&#39;   | &#39;.&#39;| \   \
+  /     \ .-' . ' |
+ /    / '/___/ \: |
+.    ' / .   \  ' .
+'   ; :__ \   \   '
+'   | '.'| \   \
 |   :    :  \   \ |
- \   \  /    &#39;---&#34;
-  `----&#39;
+ \   \  /    '---&quot;
+  `----'
 </code></pre><p><a href=https://github.com/edouardparis>GitHub</a>
 / <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p><h1 id=-experience----->[ Experience ] &mdash;</h1><p><strong>Software engineer & Lead developer, Wizardsardine</strong><br><em>Nov 2020 - Today, Remote</em></p><p><strong>Software engineer, Ulule</strong><br><em>Sept 2017 - Nov 2020, Paris</em></p><p>Development of the crowd-funding platforms Ulule and Okpal. Design and
 implementation of several services in Go using gRPC, RabbitMQ and a
