--- a/readings/index.html
+++ b/readings/index.html
@@ -8,7 +8,8 @@ edouard.paris/readings/index.txt | less</strong><br></div></aside><section><div 
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>Messieurs les enfants</em>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><h2>2023</h2><p><em>Le voyage des plantes</em>
+- José E. Mendes Ferrão</br><em>Messieurs les enfants</em>
 - Daniel Pennac</br><em>Quand la machine apprend</em>
 - Yann Le Cun</br><em>La Maison</em>
 - Emma Becker</br><em>L'île de silicium</em>
