--- a/fr/lecture/index.html
+++ b/fr/lecture/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html><head><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a><a href=https://edouard.paris/fr/lecture>/lecture</a></div><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /lecture<br><br>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L
-edouard.paris/fr/lecture/index.txt | less</strong><br></div></aside><section><div class=article-body><pre><code class=language-ascii data-lang=ascii></code></pre></div><hr><h2>2023</h2><p><em>La péninsule aux 24 saisons</em>
+edouard.paris/fr/lecture/index.txt | less</strong><br></div></aside><section><div class=article-body><pre><code class=language-ascii data-lang=ascii></code></pre></div><hr><div class=section-body><h2>2023</h2><p><em>La péninsule aux 24 saisons</em>
 - Inaba Moyumi</br><em>Le voyage des plantes</em>
 - José E. Mendes Ferrão</br><em>Messieurs les enfants</em>
 - Daniel Pennac</br><em>Quand la machine apprend</em>
@@ -90,4 +90,4 @@ edouard.paris/fr/lecture/index.txt | less</strong><br></div></aside><section><di
 - Harper Lee</br><em>Bonjour tristesse</em>
 - Françoise Sagan</br><em>Charlotte</em>
 - David Foenkinos</br><em>L'hibiscus pourpre</em>
-- Chimamanda Ngozi Adichie</br></p></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+- Chimamanda Ngozi Adichie</br></p></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
