--- a/readings/index.html
+++ b/readings/index.html
@@ -8,98 +8,4 @@ edouard.paris/readings/index.txt | less</strong><br></div></aside><section><div 
 </code></pre><p>Here, I keep updated a list of book in order to keep me motivated.
 This list, started in 2017 follows no topic or particular guideline per
 year. Books are chosen by my curiosity and the recommendations of my friends.</p><p>Computer science and programming manuals are not included. I mostly
-cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div><hr><div class=section-body><h2>2023</h2><p><em>La Chute d'Hypérion</em>
-- Dan Simmons</br><em>Hypérion</em>
-- Dan Simmons</br><em>Le suspendu de Conakry</em>
-- Jean-Christophe Rufin</br><em>La péninsule aux 24 saisons</em>
-- Inaba Moyumi</br><em>Le voyage des plantes</em>
-- José E. Mendes Ferrão</br><em>Messieurs les enfants</em>
-- Daniel Pennac</br><em>Quand la machine apprend</em>
-- Yann Le Cun</br><em>La Maison</em>
-- Emma Becker</br><em>L'île de silicium</em>
-- Chen Qiufan</br><em>Slime, a natural history</em>
-- Susanne Wedlich</br><em>Le grand Coeur</em>
-- Jean-Christophe Rufin</br><em>Tau Zéro</em>
-- Poul Anderson</br><em>Mona Lisa disjoncte</em>
-- William Gibson</br><em>Comte Zéro</em>
-- William Gibson</br><em>La Datcha</em>
-- Agnès Martin-Lugand</br></p><h2>2022</h2><p><em>L'Équateur d'Einstein. Nouvelles complétes 1</em>
-- Liu Cixin</br><em>Le grand roman de la physique quantique</em>
-- Manjit Kumar</br><em>Broadway</em>
-- Fabrice Caro</br><em>Boule de foudre</em>
-- Liu Cixin</br><em>L'Empereur-Dieu de Dune</em>
-- Frank Herbert</br><em>La Mort immortelle</em>
-- Liu Cixin</br><em>La Forêt sombre</em>
-- Liu Cixin</br><em>Le Problème à trois corps</em>
-- Liu Cixin</br><em>Les Enfants de Dune</em>
-- Frank Herbert</br><em>Le monde caché</em>
-- Merlin Sheldrake</br><em>Au commencement était…</em>
-- David Graeber & David Wengrow</br><em>Neuromancien</em>
-- William Gibson</br></p><h2>2021</h2><p><em>Le cauchemar d'Innsmouth & autres nouvelles</em>
-- Howard P. Lovecraft</br><em>Le triomphe et la chute des dinosaures</em>
-- Steve Brusatte</br><em>La ville de vapeur</em>
-- Carlos Ruiz Zafón</br><em>Le Messie de Dune</em>
-- Frank Herbert</br><em>Comment tout peut s'effrondrer</em>
-- Pablo Servigne, Raphaël Stevens</br><em>Or noir, la grande histoire du pétrole</em>
-- Matthieu Auzanneau</br><em>Tours et détours de la vilaine fille</em>
-- Mario Vargas Llosa</br><em>L'anomalie</em>
-- Hervé Le Tellier</br><em>Le Choix de Simon</em>
-- John Ramster</br><em>Outresable</em>
-- Hugh Howey</br><em>Rouge Brésil</em>
-- Jean-Christophe Rufin</br></p><h2>2020</h2><p><em>La Mort du roi Tsongor</em>
-- Laurent Gaudé</br><em>Dune</em>
-- Frank Herbert</br><em>Aux Cinq Rues, Lima</em>
-- Mario Vargas Llosa</br><em>Le Soleil des Scorta</em>
-- Laurent Gaudé</br><em>Là où dansent les morts</em>
-- Tony Hillerman</br><em>Le K</em>
-- Dino Buzzati</br><em>Le jeu de l'ange</em>
-- Carlos Ruiz Zafón</br><em>L´Éternel Mari</em>
-- Fiodor Dostoïevski</br><em>La Dame de Pique & autres récits</em>
-- Alexandre Pouchkine</br><em>Gomorra</em>
-- Roberto Saviano</br><em>L'Identité</em>
-- Milan Kundera</br><em>Le chapiteau vert</em>
-- Ludmila Oulitskaïa</br><em>Dans la forêt</em>
-- Jean Hegland</br><em>Pour en finir avec Eddy Bellegueule</em>
-- Édouard Louis</br><em>Carrie</em>
-- Stephen King</br><em>Le Zahir</em>
-- Paulo Coelho</br><em>Les Particules élémentaires</em>
-- Michel Houellebecq</br></p><h2>2019</h2><p><em>Le Meurtre du Commandeur - La Métaphore se déplace</em>
-- Haruki Murakami</br><em>Le Meurtre du Commandeur - Une Idée apparait</em>
-- Haruki Murakami</br><em>Jouer sa peau</em>
-- Nassim Nicholas Taleb</br><em>Mémoires vives</em>
-- Edward Snowden</br><em>Moi, Tituba sorcière</em>
-- Maryse Condé</br><em>Ma vie sur la route</em>
-- Gloria Steinem</br><em>Le Mur invisible</em>
-- Marlen Haushofer</br><em>Autour de ton cou</em>
-- Chimamanda Ngozi Adichie</br><em>Toute la lumière que nous ne pouvons voir</em>
-- Anthony Doerr</br><em>Beauté fatale</em>
-- Mona Chollet</br><em>Ce qu'il reste de nos rêves</em>
-- Flore Vasseur</br><em>Au pays des choses dernières (Le voyage d'Anna Blume)</em>
-- Paul Auster</br><em>La condition humaine</em>
-- André Malraux</br><em>L'Ombre du vent</em>
-- Carlos Ruiz Zafón</br></p><h2>2018</h2><p><em>Sorcières</em>
-- Mona Chollet</br><em>La Vie Heureuse et Les Bienfaits</em>
-- Sénèque</br><em>Le Prince et autres textes</em>
-- Nicolas Machiavel</br><em>Antifragile : les bienfaits du désordre</em>
-- Nassim Nicholas Taleb</br><em>Le Cygne Noir</em>
-- Nassim Nicholas Taleb</br><em>Chanson douce</em>
-- Leïla Slimani</br><em>Tous les hommes désirent naturellement savoir</em>
-- Nina Bouraoui</br><em>La Pianiste</em>
-- Elfriede Jelinek</br><em>Cercueils sur mesure</em>
-- Truman Capote</br><em>Tendre est la nuit</em>
-- Francis Scott Fitzgerald</br><em>Jérusalem</em>
-- Alan Moore</br><em>La route de la servitude</em>
-- Friedrich A. Hayek</br><em>Les gens</em>
-- Philippe Labro</br></p><h2>2017</h2><p><em>Freakonomics</em>
-- Steven D. Levitt & Stephen J.Dubner</br><em>Pensées pour moi-même</em>
-- Marc Aurèle</br><em>L'amant</em>
-- Marguerite Duras</br><em>Personne ne gagne</em>
-- Jack Black</br><em>La symphonie des nombres premiers</em>
-- Markus du Sautoy</br><em>Vernon Subutex</em>
-- Virginie Despentes</br><em>Lolita</em>
-- Vladimir Nabokov</br><em>Le Chœur des femmes</em>
-- Martin Winckler</br><em>Ne tirez pas sur l'oiseau moqueur</em>
-- Harper Lee</br><em>Bonjour tristesse</em>
-- Françoise Sagan</br><em>Charlotte</em>
-- David Foenkinos</br><em>L'hibiscus pourpre</em>
-- Chimamanda Ngozi Adichie</br></p></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+cherry pick information from them.</p><p>If the title is translated in French: I read the French translation.</p></div></br><div class=section-body><table><thead><tr><th>Title</th><th>Author</th></tr></thead><tbody><tr><td style=padding-top:2.5rem><strong>2023</strong><td></tr><tr><td><em>La Chute d'Hypérion</em></td><td>Dan Simmons</td></tr><tr><td><em>Hypérion</em></td><td>Dan Simmons</td></tr><tr><td><em>Le suspendu de Conakry</em></td><td>Jean-Christophe Rufin</td></tr><tr><td><em>La péninsule aux 24 saisons</em></td><td>Inaba Moyumi</td></tr><tr><td><em>Le voyage des plantes</em></td><td>José E. Mendes Ferrão</td></tr><tr><td><em>Messieurs les enfants</em></td><td>Daniel Pennac</td></tr><tr><td><em>Quand la machine apprend</em></td><td>Yann Le Cun</td></tr><tr><td><em>La Maison</em></td><td>Emma Becker</td></tr><tr><td><em>L'île de silicium</em></td><td>Chen Qiufan</td></tr><tr><td><em>Slime, a natural history</em></td><td>Susanne Wedlich</td></tr><tr><td><em>Le grand Coeur</em></td><td>Jean-Christophe Rufin</td></tr><tr><td><em>Tau Zéro</em></td><td>Poul Anderson</td></tr><tr><td><em>Mona Lisa disjoncte</em></td><td>William Gibson</td></tr><tr><td><em>Comte Zéro</em></td><td>William Gibson</td></tr><tr><td><em>La Datcha</em></td><td>Agnès Martin-Lugand</td></tr><tr><td style=padding-top:2.5rem><strong>2022</strong><td></tr><tr><td><em>L'Équateur d'Einstein. Nouvelles complétes 1</em></td><td>Liu Cixin</td></tr><tr><td><em>Le grand roman de la physique quantique</em></td><td>Manjit Kumar</td></tr><tr><td><em>Broadway</em></td><td>Fabrice Caro</td></tr><tr><td><em>Boule de foudre</em></td><td>Liu Cixin</td></tr><tr><td><em>L'Empereur-Dieu de Dune</em></td><td>Frank Herbert</td></tr><tr><td><em>La Mort immortelle</em></td><td>Liu Cixin</td></tr><tr><td><em>La Forêt sombre</em></td><td>Liu Cixin</td></tr><tr><td><em>Le Problème à trois corps</em></td><td>Liu Cixin</td></tr><tr><td><em>Les Enfants de Dune</em></td><td>Frank Herbert</td></tr><tr><td><em>Le monde caché</em></td><td>Merlin Sheldrake</td></tr><tr><td><em>Au commencement était…</em></td><td>David Graeber & David Wengrow</td></tr><tr><td><em>Neuromancien</em></td><td>William Gibson</td></tr><tr><td style=padding-top:2.5rem><strong>2021</strong><td></tr><tr><td><em>Le cauchemar d'Innsmouth & autres nouvelles</em></td><td>Howard P. Lovecraft</td></tr><tr><td><em>Le triomphe et la chute des dinosaures</em></td><td>Steve Brusatte</td></tr><tr><td><em>La ville de vapeur</em></td><td>Carlos Ruiz Zafón</td></tr><tr><td><em>Le Messie de Dune</em></td><td>Frank Herbert</td></tr><tr><td><em>Comment tout peut s'effrondrer</em></td><td>Pablo Servigne, Raphaël Stevens</td></tr><tr><td><em>Or noir, la grande histoire du pétrole</em></td><td>Matthieu Auzanneau</td></tr><tr><td><em>Tours et détours de la vilaine fille</em></td><td>Mario Vargas Llosa</td></tr><tr><td><em>L'anomalie</em></td><td>Hervé Le Tellier</td></tr><tr><td><em>Le Choix de Simon</em></td><td>John Ramster</td></tr><tr><td><em>Outresable</em></td><td>Hugh Howey</td></tr><tr><td><em>Rouge Brésil</em></td><td>Jean-Christophe Rufin</td></tr><tr><td style=padding-top:2.5rem><strong>2020</strong><td></tr><tr><td><em>La Mort du roi Tsongor</em></td><td>Laurent Gaudé</td></tr><tr><td><em>Dune</em></td><td>Frank Herbert</td></tr><tr><td><em>Aux Cinq Rues, Lima</em></td><td>Mario Vargas Llosa</td></tr><tr><td><em>Le Soleil des Scorta</em></td><td>Laurent Gaudé</td></tr><tr><td><em>Là où dansent les morts</em></td><td>Tony Hillerman</td></tr><tr><td><em>Le K</em></td><td>Dino Buzzati</td></tr><tr><td><em>Le jeu de l'ange</em></td><td>Carlos Ruiz Zafón</td></tr><tr><td><em>L´Éternel Mari</em></td><td>Fiodor Dostoïevski</td></tr><tr><td><em>La Dame de Pique & autres récits</em></td><td>Alexandre Pouchkine</td></tr><tr><td><em>Gomorra</em></td><td>Roberto Saviano</td></tr><tr><td><em>L'Identité</em></td><td>Milan Kundera</td></tr><tr><td><em>Le chapiteau vert</em></td><td>Ludmila Oulitskaïa</td></tr><tr><td><em>Dans la forêt</em></td><td>Jean Hegland</td></tr><tr><td><em>Pour en finir avec Eddy Bellegueule</em></td><td>Édouard Louis</td></tr><tr><td><em>Carrie</em></td><td>Stephen King</td></tr><tr><td><em>Le Zahir</em></td><td>Paulo Coelho</td></tr><tr><td><em>Les Particules élémentaires</em></td><td>Michel Houellebecq</td></tr><tr><td style=padding-top:2.5rem><strong>2019</strong><td></tr><tr><td><em>Le Meurtre du Commandeur - La Métaphore se déplace</em></td><td>Haruki Murakami</td></tr><tr><td><em>Le Meurtre du Commandeur - Une Idée apparait</em></td><td>Haruki Murakami</td></tr><tr><td><em>Jouer sa peau</em></td><td>Nassim Nicholas Taleb</td></tr><tr><td><em>Mémoires vives</em></td><td>Edward Snowden</td></tr><tr><td><em>Moi, Tituba sorcière</em></td><td>Maryse Condé</td></tr><tr><td><em>Ma vie sur la route</em></td><td>Gloria Steinem</td></tr><tr><td><em>Le Mur invisible</em></td><td>Marlen Haushofer</td></tr><tr><td><em>Autour de ton cou</em></td><td>Chimamanda Ngozi Adichie</td></tr><tr><td><em>Toute la lumière que nous ne pouvons voir</em></td><td>Anthony Doerr</td></tr><tr><td><em>Beauté fatale</em></td><td>Mona Chollet</td></tr><tr><td><em>Ce qu'il reste de nos rêves</em></td><td>Flore Vasseur</td></tr><tr><td><em>Au pays des choses dernières (Le voyage d'Anna Blume)</em></td><td>Paul Auster</td></tr><tr><td><em>La condition humaine</em></td><td>André Malraux</td></tr><tr><td><em>L'Ombre du vent</em></td><td>Carlos Ruiz Zafón</td></tr><tr><td style=padding-top:2.5rem><strong>2018</strong><td></tr><tr><td><em>Sorcières</em></td><td>Mona Chollet</td></tr><tr><td><em>La Vie Heureuse et Les Bienfaits</em></td><td>Sénèque</td></tr><tr><td><em>Le Prince et autres textes</em></td><td>Nicolas Machiavel</td></tr><tr><td><em>Antifragile : les bienfaits du désordre</em></td><td>Nassim Nicholas Taleb</td></tr><tr><td><em>Le Cygne Noir</em></td><td>Nassim Nicholas Taleb</td></tr><tr><td><em>Chanson douce</em></td><td>Leïla Slimani</td></tr><tr><td><em>Tous les hommes désirent naturellement savoir</em></td><td>Nina Bouraoui</td></tr><tr><td><em>La Pianiste</em></td><td>Elfriede Jelinek</td></tr><tr><td><em>Cercueils sur mesure</em></td><td>Truman Capote</td></tr><tr><td><em>Tendre est la nuit</em></td><td>Francis Scott Fitzgerald</td></tr><tr><td><em>Jérusalem</em></td><td>Alan Moore</td></tr><tr><td><em>La route de la servitude</em></td><td>Friedrich A. Hayek</td></tr><tr><td><em>Les gens</em></td><td>Philippe Labro</td></tr><tr><td style=padding-top:2.5rem><strong>2017</strong><td></tr><tr><td><em>Freakonomics</em></td><td>Steven D. Levitt & Stephen J.Dubner</td></tr><tr><td><em>Pensées pour moi-même</em></td><td>Marc Aurèle</td></tr><tr><td><em>L'amant</em></td><td>Marguerite Duras</td></tr><tr><td><em>Personne ne gagne</em></td><td>Jack Black</td></tr><tr><td><em>La symphonie des nombres premiers</em></td><td>Markus du Sautoy</td></tr><tr><td><em>Vernon Subutex</em></td><td>Virginie Despentes</td></tr><tr><td><em>Lolita</em></td><td>Vladimir Nabokov</td></tr><tr><td><em>Le Chœur des femmes</em></td><td>Martin Winckler</td></tr><tr><td><em>Ne tirez pas sur l'oiseau moqueur</em></td><td>Harper Lee</td></tr><tr><td><em>Bonjour tristesse</em></td><td>Françoise Sagan</td></tr><tr><td><em>Charlotte</em></td><td>David Foenkinos</td></tr><tr><td><em>L'hibiscus pourpre</em></td><td>Chimamanda Ngozi Adichie</td></tr></tbody></table></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
