deploy: dab2fb60b6292dd5c43b255ffadf1f2f60f1d48d

--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,6 @@
-<!doctype html><html><head><meta name=generator content="Hugo 0.78.0"><title>edouard.paris</title><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a></div><aside class=head-aside><div class=sidenote><br>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L
-edouard.paris/fr/index.txt | less</strong><br></div></aside><section><div class=article-body><pre><code class=language-ascii data-lang=ascii>    ___       ___       ___       ___       ___       ___       ___
+<!doctype html><html><head><meta name=generator content="Hugo 0.120.3"><title>edouard.paris</title>
+<meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Site web personnel de Edouard Paris"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><div class=article-header><a href=https://edouard.paris/fr>~/edouard.paris/fr</a></div><aside class=head-aside><div class=sidenote><br>Lisez cette page dans un terminal avec la commande:<br><strong>$ curl -L
+edouard.paris/fr/index.txt | less</strong><br></div></aside><section><div class=article-body><pre tabindex=0><code class=language-ascii data-lang=ascii>    ___       ___       ___       ___       ___       ___       ___
    /\  \     /\  \     /\__\     /\  \     /\  \     /\__\     /\  \
   /::\  \   /::\  \   /:| _|_   _\:\  \   /::\  \   /:/ _/_   /::\  \
  /::\:\__\ /:/\:\__\ /::|/\__\ /\/::\__\ /:/\:\__\ /:/_/\__\ /::\:\__\
@@ -8,4 +9,4 @@ edouard.paris/fr/index.txt | less</strong><br></div></aside><section><div class=
    \/__/     \/__/     \/__/               \/__/     \/__/     \|__| ,
 </code></pre><p>Je m&rsquo;appelle Édouard Paris.</p><p>Je suis ingénieur en informatique et mathématiques appliquées,
 vous pouvez me retrouver sur :</p><p>/ <a href=https://github.com/edouardparis>GitHub</a>
-/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><aside><div class=sidenote>&copy; 2023 EdouardParis.<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
+/ <a href=https://www.linkedin.com/in/parisedouard/>LinkedIn</a></p></div></section><aside><div class=sidenote>&copy;<br>Powered by <a href=http://gohugo.io target=_blank>Hugo</a></div></aside><footer id=footer></br></br></footer></main></body></html>
