--- a/notes/index.html
+++ b/notes/index.html
@@ -1,7 +1,9 @@
 <!doctype html><html><head><title>edouard.paris</title>
 <meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><meta name=description content="Edouard Paris personal website"><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css><link rel=stylesheet type=text/css href=/css/main.css></head><body><main><div class=article-header><a href=https://edouard.paris>~/edouard.paris</a><a href=https://edouard.paris/notes>/notes</a></div><aside class=head-aside><div class=sidenote><a href=./index.xml>RSS feed</a> for /notes<br><br>Read this page in your terminal with the command:<br><strong>$ curl -L
 edouard.paris/notes/index.txt | less</strong><br></div></aside><section><div class=article-body><p>Small notes about how to do some stuff.</p><p>In case of typographical or grammar errors, tickets are welcomed on the
-<a href=https://github.com/edouardparis/edouard.paris>github repository</a>.</p></div><h1>2023 --</h1><ul><li><span><time>Nov 13
+<a href=https://github.com/edouardparis/edouard.paris>github repository</a>.</p></div><h1>2024 --</h1><ul><li><span><time>Jan 15
+</time></span>|
+<a href=https://edouard.paris/notes/install-nixos-on-an-ovh-vps-with-nixos-anywhere/>Install NixOs on an OVH vps with nixos-anywhere</a></li></ul><h1>2023 --</h1><ul><li><span><time>Nov 13
 </time></span>|
 <a href=https://edouard.paris/notes/paneception/>Paneception</a></li><li><span><time>Mar 26
 </time></span>|
